--- a/catalog/templates/catalog/actor_page.html
+++ b/catalog/templates/catalog/actor_page.html
@@ -19,7 +19,7 @@ Actor page
                     </div>
                     <div class="movie-details">
                         <h3>Biography:</h3>
-                        <p>{{actor.biography}}</p>
+                        <p>{{bio}}</p>
                     </div>
                     <div class="actors">
                         <div>
