fill in the database

--- a/users/templates/user_page.html
+++ b/users/templates/user_page.html
@@ -52,7 +52,7 @@ Movie Catalog
                     <div class="image">
                         <div class="wrapper">
                             <a class="image" href="/movie/{{movie.id}}/" title="movie.cover_image">
-                                <img class="poster" src="{% static movie.cover_image %}" alt=""/>
+                                <img class="poster" src="{% static movie.cover_image.url %}" alt=""/>
                             </a>
                         </div>
                     </div>
