--- a/catalog/templates/catalog/movie_page.html
+++ b/catalog/templates/catalog/movie_page.html
@@ -37,7 +37,7 @@ Movie Catalog
                         </div>
                         <div class="star-container">
                             <input type="radio" name="star" id="five"/>
-                            {% for i in rating %}
+                            {% for value in rating %}
                             <label for="five">
                                 <svg class="star">
                                     <use xlink:href="#star"/>
