--- a/catalog/static/catalog/css/catalog.css
+++ b/catalog/static/catalog/css/catalog.css
@@ -65,10 +65,11 @@
     transform: translateY(-2px);
   }
 
-  .pages {
+.pages {
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  flex-wrap: wrap;
 }
 
 .pagination {
