--- a/catalog/templates/catalog/catalog_movies.html
+++ b/catalog/templates/catalog/catalog_movies.html
@@ -80,26 +80,37 @@ Movie Catalog
             <div class="pages">
                 <ul class="pagination">
                     {% if movies.has_previous %}
-                    <li><a href="?page={{ page.previous_page_number }}"><-</a></li>
+                    <li class="page-item"><a class="page-link" href="?page={{ page.previous_page_number }}"><-</a></li>
                     {% else %}
-                    <li class="disabled"><span></span></li>
+                    <li class="page-item disabled"><span class="page-link"></span></li>
                     {% endif %}
+
                     {% for i in movies.paginator.page_range %}
-                    {% if ucount_movie.number == i %}
-                    <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-                    {% else %}
-                    <li><a href="?page={{ i }}">{{ i }}</a></li>
+                    {% if i == 1 %}
+                    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                    {% elif i == movies.number|add:-5 %}
+                    <li class="page-item"><span class="page-link">...</span></li>
+                    {% elif i > movies.number|add:-5 and i <= movies.number|add:4 and i < movies.paginator.num_pages %}
+                    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                    {% elif i == movies.number|add:5 and i < movies.paginator.num_pages %}
+                    <li class="page-item"><span class="page-link">...</span></li>
+                    {% elif i == movies.paginator.num_pages %}
+                    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
                     {% endif %}
                     {% endfor %}
+
                     {% if movies.has_next %}
-                    <li><a href="?page={{ movies.next_page_number }}">-></a></li>
+                    <li class="page-item"><a class="page-link" href="?page={{ movies.next_page_number }}">-></a></li>
                     {% else %}
-                    <li class="disabled"><span></span></li>
+                    <li class="page-item disabled"><span class="page-link"></span></li>
                     {% endif %}
                 </ul>
-                {% endif %}
             </div>
+            {% endif %}
+
+
         </div>
+    </div>
     </div>
 </section>
 {% endblock %}
