--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -46,7 +46,7 @@ MovieDatabase
                     </div>
                 </div>
                 <div class="name"><a href="" title="{{movie.title}}">{{movie.title}}</a></div>
-                <p>{{movie.release_date.year}} ‧ {{movie.genre.first}} ‧ {{movie.runtime}}</p>
+                <p>{{movie.release_date}} ‧ {{movie.genre.first}} ‧ {{movie.runtime}}</p>
 
                 <p class="rating">Rating: {{ movie.avg_rating }}/5</p>
             </div>
